--- a/app/src/main/res/layout/events_recycle.xml
+++ b/app/src/main/res/layout/events_recycle.xml
@@ -81,67 +81,26 @@
             android:orientation="horizontal"
             android:layout_gravity="end|bottom"
             android:gravity="end|center_vertical"
-            android:weightSum="6"
             android:visibility="gone" >
 
             <ImageButton
                 android:contentDescription="@string/content_description"
                 android:id="@+id/info_button"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_info_outline"
                 android:background="@android:color/transparent" />
 
             <ImageButton
                 android:contentDescription="@string/content_description"
-                android:id="@+id/campus_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:src="@drawable/ic_campus"
-                android:background="@android:color/transparent" />
-
-            <ImageButton
-                android:contentDescription="@string/content_description"
-                android:id="@+id/calendar_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:src="@drawable/ic_calendar"
-                android:background="@android:color/transparent" />
-
-            <ImageButton
-                android:contentDescription="@string/content_description"
                 android:id="@+id/favorite_button"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_favorite_outline"
-                android:background="@android:color/transparent" />
-
-            <ImageButton
-                android:contentDescription="@string/content_description"
-                android:id="@+id/attending_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:src="@drawable/ic_check"
-                android:background="@android:color/transparent" />
-
-            <ImageButton
-                android:contentDescription="@string/content_description"
-                android:id="@+id/mapit_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center_horizontal"
-                android:src="@drawable/ic_mapit"
                 android:background="@android:color/transparent" />
 
         </LinearLayout>
