--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -34,6 +34,13 @@
                 android:clipToPadding="false"
                 app:pstsPaddingMiddle="true" />
 
+            <com.techhab.kcollegecustomviews.ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="fill_parent"
+                android:layout_height="8dp"
+                android:layout_gravity="bottom"
+                style="@android:style/Widget.ProgressBar.Horizontal" />
+
         </FrameLayout>
 
         <android.support.v4.view.ViewPager
