--- a/app/src/main/res/layout/fragment_cafeteria.xml
+++ b/app/src/main/res/layout/fragment_cafeteria.xml
@@ -32,8 +32,8 @@
                     android:text="@string/open"/>-->
                     <FrameLayout
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:background="@color/OpenGreen">
+                        android:layout_height="wrap_content">
+                        <!--android:background="@color/OpenGreen"-->
 
                         <ImageView
                             android:id="@+id/fragment_cafeteria_image"
@@ -48,30 +48,36 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:textSize="16dp"
+                            android:layout_marginLeft="5dp"
                             android:textColor="@color/abc_secondary_text_material_dark"
                             android:gravity="center_vertical"
                             android:layout_gravity="center_vertical"
                             android:text="Closes in 2 hours"
                             />
 
+                    <FrameLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="match_parent">
+
                         <ImageButton
+                            android:id="@+id/ibExpandable"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:background="@null"
                             android:src="@drawable/ic_action_expand"
-                            android:id="@+id/ibExpandable"
-                            android:layout_gravity="center_vertical"
+                            android:layout_marginRight="12dp"
+                            android:layout_gravity="center_vertical|right"
                             />
+
+                        </FrameLayout>
 
                     </LinearLayout>
 
                 <TextView android:id="@+id/fragment_cafeteria_tvTimeDetail"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:textSize="16dp"
-                    android:visibility="gone"
                     android:paddingTop="4dp"
-                    android:animateLayoutChanges="true"
                     android:textColor="@color/abc_secondary_text_material_dark"
                     android:layout_marginLeft="70dp"
                     android:text="Monday-Friday 8:00-10:00pm\nSaturdays 12:00-6:00pm\nSundays 10-7pm"
@@ -82,13 +88,16 @@
             <Spinner
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/fragment_cafeteria_spinner"/>
+                android:layout_margin="8dp"
+                android:id="@+id/fragment_cafeteria_spinner"
+                android:drawSelectorOnTop="true"
+                android:layout_below="@+id/cafeteria_status_bar"/>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/fragment_cafeteria_rvMenu"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cafeteria_status_bar"/>
+                android:layout_below="@+id/fragment_cafeteria_spinner"/>
 
         </RelativeLayout>
 
