--- a/app/src/main/res/layout/fragment_richardson.xml
+++ b/app/src/main/res/layout/fragment_richardson.xml
@@ -63,12 +63,17 @@
                 android:text="Monday-Friday 8:00-10:00pm\nSaturdays 12:00-6:00pm\nSundays 10-7pm"
                 />
 
+            <Spinner
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/richardson_spinner"
+                />
+
         </LinearLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/fragment_cafeteria_rvMenu"
             android:layout_width="match_parent"
-            android:animateLayoutChanges="true"
             android:layout_height="wrap_content"/>
 
     </LinearLayout>
