--- a/app/src/main/res/layout/activity_academic.xml
+++ b/app/src/main/res/layout/activity_academic.xml
@@ -11,16 +11,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <FrameLayout
+        <LinearLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:background="@color/main00" >
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/medium_toolbar"
+                android:layout_height="@dimen/abc_action_bar_default_height_material"
                 android:minHeight="@dimen/abc_action_bar_default_height_material"
-                android:background="@color/main00"
                 app:theme="@style/Toolbar"
                 app:popupTheme="@style/Theme.AppCompat.Light" />
 
@@ -34,7 +35,7 @@
                 app:pstsPaddingMiddle="false"
                 app:pstsShouldExpand="true" />
 
-        </FrameLayout>
+        </LinearLayout>
 
         <android.support.v4.view.ViewPager
             android:id="@+id/pager"
