--- a/app/src/main/res/layout/events_recycle.xml
+++ b/app/src/main/res/layout/events_recycle.xml
@@ -5,12 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:layout_marginTop="4dp"
-    android:layout_marginBottom="4dp"
-    android:layout_marginStart="8dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginEnd="8dp"
-    android:layout_marginRight="8dp"
+    android:layout_margin="8dp"
     app:style="@style/CardView"
     android:animateLayoutChanges="true" >
 
@@ -64,15 +59,14 @@
         <TextView
             android:id="@+id/place"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
             android:gravity="center_vertical"
             android:padding="16dp"
             android:textSize="16sp"
             android:textColor="@color/primary_text_default_material_light" />
 
         <include layout="@layout/card_divider"
-            android:id="@+id/divider"
-            android:visibility="gone" />
+            android:id="@+id/divider" />
 
         <LinearLayout
             android:id="@+id/button_section"
@@ -80,8 +74,7 @@
             android:layout_height="50dp"
             android:orientation="horizontal"
             android:layout_gravity="end|bottom"
-            android:gravity="end|center_vertical"
-            android:visibility="gone" >
+            android:gravity="end|center_vertical" >
 
             <ImageButton
                 android:contentDescription="@string/content_description"
@@ -93,15 +86,16 @@
                 android:src="@drawable/ic_info_outline"
                 android:background="@android:color/transparent" />
 
-            <ImageButton
+            <ImageView
                 android:contentDescription="@string/content_description"
                 android:id="@+id/favorite_button"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_favorite_outline"
-                android:background="@android:color/transparent" />
+                android:background="@android:color/transparent"
+                android:clickable="true" />
 
         </LinearLayout>
 
