--- a/app/src/main/res/layout/events_recycle.xml
+++ b/app/src/main/res/layout/events_recycle.xml
@@ -79,8 +79,8 @@
             <ImageButton
                 android:contentDescription="@string/content_description"
                 android:id="@+id/info_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_info_outline"
@@ -94,6 +94,39 @@
                 android:padding="8dp"
                 android:gravity="center_horizontal"
                 android:src="@drawable/ic_favorite_outline"
+                android:background="@android:color/transparent"
+                android:clickable="true" />
+
+            <ImageView
+                android:contentDescription="@string/content_description"
+                android:id="@+id/building_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:gravity="center_horizontal"
+                android:src="@drawable/ic_campus"
+                android:background="@android:color/transparent"
+                android:clickable="true" />
+
+            <ImageView
+                android:contentDescription="@string/content_description"
+                android:id="@+id/calendar_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:gravity="center_horizontal"
+                android:src="@drawable/ic_calendar"
+                android:background="@android:color/transparent"
+                android:clickable="true" />
+
+            <ImageView
+                android:contentDescription="@string/content_description"
+                android:id="@+id/attending_button"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:gravity="center_horizontal"
+                android:src="@drawable/ic_check"
                 android:background="@android:color/transparent"
                 android:clickable="true" />
 
